--- a/index.html
+++ b/index.html
@@ -1,57 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet'
-        integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous'>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.materialdesignicons.com/7.2.96/css/materialdesignicons.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Bootstrap Practice</title>
-</head>
+  </head>
 
-<body class="container-fluid text-center">
-    <header class="row justify-content-center align-items-center bg-dark text-light">
-        <div class="col-12">
-            <h1>This is the header</h1>
-        </div>
+  <body class="container-fluid text-center">
+    <header
+      class="row justify-content-center align-items-center bg-dark text-light"
+    >
+      <div class="col-12">
+        <h1>This is the header</h1>
+      </div>
     </header>
     <main class="row justify-content-center align-items-center bg-secondary">
-        <div class="col-12">
-            <section class="row justify-content-center align-items-center">
-                <div class="col-12">
-                    <h2>This is the main</h2>
+      <div class="col-12">
+        <section class="row justify-content-center align-items-center">
+          <div class="col-12">
+            <h2>This is the main</h2>
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Launch demo modal
+            </button>
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">
+                      Modal title
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">...</div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
                 </div>
-            </section>
-            <section class="row justify-content-center">
-                <div class="col-4">
-                    <div class="card card-custom">
-                        <p>Text in card</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card card-custom">
-                        <p>Text in card</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card card-custom">
-                        <p>Text in card</p>
-                    </div>
-                </div>
-            </section>
-        </div>
+              </div>
+            </div>
+            <form class="form-floating">
+              <input
+                type="email"
+                class="form-control"
+                id="floatingInputValue"
+                placeholder="name@example.com"
+                value="test@example.com"
+              />
+              <label for="floatingInputValue">Input with value</label>
+            </form>
+          </div>
+        </section>
+        <section class="row justify-content-center">
+          <div class="col-4">
+            <div class="card card-custom">
+              <p>Text in card</p>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card card-custom">
+              <p>Text in card</p>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card card-custom">
+              <p>Text in card</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
-    <footer class="row justify-content-center align-items-center bg-primary text-light">
-        <div class="col-6">
-            <h3>This is the footer</h3>
-        </div>
-        <div class="col-6">
-            <p>Other stuff</p>
-        </div>
+    <footer
+      class="row justify-content-center align-items-center bg-primary text-light"
+    >
+      <div class="col-6">
+        <h3>This is the footer</h3>
+      </div>
+      <div class="col-6">
+        <p>Other stuff</p>
+      </div>
     </footer>
-
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
